# hierarchy-curator

./: .env  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  Dockerfile  README.md  example.csv  manifest.json  pyproject.toml  requirements.txt  run.py  setup.cfg  setup.py
.github/: release-drafter.yml
curator/: __init__.py
custom_curator/: curate.py  curator.py  parser.py  reporters.py  utils.py  walker.py
docs/: CONTRIBUTING.md  multiprocessing.md  release_notes.md  tutorial_convert_from_legacy.md
examples/: deidentify_jitter_weight.py  dicom_header_splitter.py  events_curator.py  file_deleter.py  legacy-translated.py  my_curator.py  print_container_path.py  print_hierarchy.py  read_patient_weight.py  retrigger_gear_rules.py  smart_copy_multi_projects.py  test_file_basic.py  update_dicoms_from_subject_metadata.py  update_file_classification.py  update_session_info_based_on_input_csv_file.py  update_session_label_based_on_input_csv_file.py  update_session_label_based_on_mapping.py
flywheel_hierarchy_curator/: curate.py  parser.py
fw_gear_hierarchy_curator/: curate.py  test.py  utils.py
tests/: Dockerfile  config.json  conftest.py  end_to_end.py  integration.py  test_curator.py  test_integration.py  test_parser.py  test_reporters.py  test_utils.py  test_walker.py
tests/assets/: config.json  dummy_curator.py
