[tool.poetry]
name = "fw-gear-hierarchy-curator"
version = "1.0.0"
description = "Custom hierarchy curation gear"
authors = ["Flywheel <support@flywheel.io>"]
license = "MIT"

    [tool.poetry.dependencies]
    python = "^3.8"
    lxml = "^4.6.1"
    pandas = "^1.1.4"
    nibabel = "^3.2.0"
    Pillow = "^8.0.1"
    piexif = "^1.1.3"
    pydicom = "^2.1.1"
    pypng = "^0.0.20"
    flywheel-gear-toolkit = "^0.1.3"
    fw-file = "^0.4.4"

    [tool.poetry.dev-dependencies]
    pytest = "^6.1.2"
    pytest-cov = "^2.10.1"
    pytest-mock = "^3.3.1"
    coverage = {extras = ["toml"], version = "^5.3"}
    pylint = "^2.6.0"
    pycodestyle = "^2.6.0"
    pydocstyle = "^5.1.1"
    black = "^20.8b1"
    isort = "^5.6.4"


[tool.pytest.ini_options]
    minversion = "6.0"
    addopts = [
      "--cov=flywheel_hierarchy_curator",
      "--cov-report=html",
    ]
    testpaths = [
        "tests",
    ]

[tool.black]
    exclude = '''
      /(
          \.eggs         # exclude a few common directories in the
        | \.git          # root of the project
        | \.mypy_cache
        | \.tox
        | build
        | dist
        | \.cache
      )/
    '''

[build-system]
    requires = ["poetry-core>=1.0.0"]
    build-backend = "poetry.core.masonry.api"
